feat: create hours route
