# src/domain/entities/volunteer/volunteer-hours-entity.ts
@@ -1,0 +1,9 @@
+export type VolunteerHoursEntity = {
+  submissionDate: Date;
+  idVol: number;
+  manag: number;
+  comm: number;
+  tec: number;
+  event: number;
+  att: number;
+};
